[package]
name = "git-tools"
version = "0.1.1"
edition = "2018"

[[bin]]
name = "git-shell"
path = "src/shell.rs"

[[bin]]
name = "git-site"
path = "src/site.rs"

[dependencies]
anyhow = "1.0.41"
figment = "0.10.6"
futures = "0.3.15"
git2 = "0.13.20"
log = "0.4.14"
rocket = "0.5.0-rc.1"
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["tera"] }
serde = { version = "1.0.126", features = ["derive"] }
tera = "1.12.0"
tokio = { version = "1.7.1", features = ["full"] }
tokio-stream = { version = "0.1.6", features = ["fs"] }
toml = "0.5.8"
